--- a/ui/style.css
+++ b/ui/style.css
@@ -25,6 +25,6 @@ body {
             color: #4a4a4a;
             font-family: sans-serif;
             
-            padding-left:20px
+            padding-left:20px;
             padding-right:20px;
         }
